--- a/styles.css
+++ b/styles.css
@@ -73,3 +73,43 @@ h2 {
     margin-top: 20px;
     color: #333;
 }
+
+.dark-mode {
+    background-color: #333;
+    color: #fff;
+}
+
+.dark-mode .container {
+    background-color: #444;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+}
+
+.dark-mode h1 {
+    color: #fff;
+}
+
+.dark-mode input[type="text"],
+.dark-mode input[type="number"] {
+    background-color: #555;
+    color: #fff;
+    border-color: #777;
+}
+
+.dark-mode button {
+    background-color: #555;
+    color: #fff;
+    border-color: #777;
+}
+
+.dark-mode button:hover {
+    background-color: #777;
+}
+
+.dark-mode li {
+    background-color: #555;
+    border-color: #777;
+}
+
+.dark-mode h2 {
+    color: #fff;
+}
